[package]
name = "philharmonic-connector-common"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-common"
description = "Shared vocabulary for the Philharmonic connector layer: COSE token and payload types, realm model, ConnectorCallContext, shared error types."

[dependencies]
philharmonic-types = "0.3"
coset = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
