[package]
name = "philharmonic-connector-common"
version = "0.2.2"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-common"
description = "Shared vocabulary for the Philharmonic connector layer: COSE token and payload types, realm model, ConnectorCallContext, shared error types."

[dependencies]
philharmonic-types = "0.3"
coset = { version = "0.4", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }

[dev-dependencies]
serde_json = { version = "1", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
